# generiklist

./: .gitignore  CMakeLists.txt  README.md
src/: gklist.h  gklobjects.h  klist.h
test/: demo.cpp  iterator.cpp
test/bench/: push_pop.cpp
test/demo_classes/: foo.h
